--- a/manjaro-blade.conf
+++ b/manjaro-blade.conf
@@ -28,12 +28,11 @@ secondary-click-time=1.2
 [org/gnome/desktop/interface]
 toolkit-accessibility=false
 
-
 [net/launchpad/plank/docks/dock1]
 alignment='center'
 auto-pinning=true
 current-workspace-only=false
-dock-items=['chromium.dockitem', 'steam-1.dockitem', 'org.gnome.Terminal.dockitem', 'nemo.dockitem', 'mailspring.dockitem', 'slack.dockitem', 'discord.dockitem', 'visual-studio-code.dockitem', 'arduino.dockitem', 'jetbrains-idea.dockitem', 'jetbrains-rider.dockitem', 'digilent.waveforms.dockitem', 'saleae-logic.dockitem', 'exodus.dockitem', 'firefox.dockitem', 'trash.dockitem']
+# dock-items=['chromium.dockitem', 'steam-1.dockitem', 'org.gnome.Terminal.dockitem', 'nemo.dockitem', 'mailspring.dockitem', 'slack.dockitem', 'discord.dockitem', 'visual-studio-code.dockitem', 'arduino.dockitem', 'jetbrains-idea.dockitem', 'jetbrains-rider.dockitem', 'digilent.waveforms.dockitem', 'saleae-logic.dockitem', 'exodus.dockitem', 'firefox.dockitem', 'trash.dockitem']
 hide-delay=0
 hide-mode='intelligent'
 icon-size=48
